# hadoop-common

hadoop-common-project/hadoop-common/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-app/src/main/java/org/apache/hadoop/mapreduce/v2/app/: MRAppMaster.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-app/src/main/java/org/apache/hadoop/mapreduce/v2/app/launcher/: ContainerLauncher.java  URMContainerLauncher.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-app/src/main/java/org/apache/hadoop/mapreduce/v2/app/rm/: RMCommunicator.java  URMContainerAllocator.java  URMScheduler.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-app/src/test/java/org/apache/hadoop/mapreduce/v2/app/: TestRMContainerAllocator.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-common/: pom.xml
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-common/src/: CMakeLists.txt
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-common/src/main/java/org/apache/hadoop/mapred/ompi/: OmpiCommon.java  OmpiJobClient.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-common/src/main/java/org/apache/hadoop/mapreduce/urm/: URMUtils.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-common/src/main/native/src/org/apache/hadoop/mapred/ompi/: jobclient.c  ompicommon.c
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/src/main/java/org/apache/hadoop/mapreduce/: JobSubmitter.java  MRConfig.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-jobclient/src/main/java/org/apache/hadoop/mapred/: URMClientCache.java  URMClientServiceDelegate.java  URMDelegate.java  URMRunner.java  YarnClientProtocolProvider.java
hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-jobclient/src/test/java/org/apache/hadoop/mapred/: WordCount.java
hadoop-mapreduce-project/hadoop-mapreduce-examples/src/main/java/org/apache/hadoop/examples/: WordCount.java
hadoop-tools/hadoop-sls/src/main/java/org/apache/hadoop/yarn/sls/scheduler/: ResourceSchedulerWrapper.java
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-api/src/main/java/org/apache/hadoop/yarn/api/: ContainerManagementProtocol.java
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-api/src/main/java/org/apache/hadoop/yarn/api/protocolrecords/: AllocateRequest.java  AllocateResponse.java  ChangeContainersResourceRequest.java  ChangeContainersResourceResponse.java
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-api/src/main/java/org/apache/hadoop/yarn/api/records/: ResourceChangeContext.java  ResourceIncreaseContext.java  ResourceRequest.java
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-api/src/main/proto/: containermanagement_protocol.proto  yarn_protos.proto  yarn_service_protos.proto
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-client/src/main/java/org/apache/hadoop/yarn/client/api/: AMRMClient.java
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-common/: pom.xml
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-common/src/test/java/org/apache/hadoop/yarn/: TestContainerLaunchRPC.java  TestRPC.java  TestResourceChangeRPC.java
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-common/src/test/java/org/apache/hadoop/yarn/api/: TestAllocateRequest.java  TestAllocateResponse.java  TestChangeContainersResourceRequest.java  TestChangeContainersResourceResponse.java  TestResourceChangeContext.java  TestResourceIncreaseContext.java  TestResourceRequest.java
hadoop-yarn-project/hadoop-yarn/hadoop-yarn-server/hadoop-yarn-server-common/src/main/proto/: yarn_server_common_protos.proto
(+65 files in other folders)
